--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
-		<script type="module" defer src="client/index.js"></script>
+		<script defer src="/dist/bundle.js"></script>
 		<title>Elizabeth Woodhouse</title>
 		<link rel="stylesheet" href="style.css" />
 	</head>
