--- a/client/index.html
+++ b/client/index.html
@@ -10,20 +10,15 @@
 	<body>
 		<nav>
 			<ul>
-				<li><a href="/home">Home</a></li>
-				<li><a href="#">Projects</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="/" onclick="onNav('/')">Home</a></li>
+				<li><a href="/projects" onclick="onNav('/projects')">Projects</a></li>
+				<li><a href="/contact" onclick="onNav('/contact')">Contact</a></li>
 				<li><a href="#">Resume</a></li>
 			</ul>
 		</nav>
 		<div id="content" class="content"></div>
 		<footer>
 			<p>Created by Elizabeth Woodhouse</p>
-			<p>
-				Website created with:
-				<br />
-				Vanilla Javascript, HTML, CSS, and Webpack
-			</p>
 		</footer>
 	</body>
 </html>
