--- a/client/index.html
+++ b/client/index.html
@@ -8,11 +8,14 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
+		<div>
+			<img class='logo-image'src="./images/logo.png" />
+		</div>
 		<nav>
-			<ul>
-				<li><a href="/" onclick="onNav('/')">Home</a></li>
-				<li><a href="/projects" onclick="onNav('/projects')">Projects</a></li>
-				<li><a href="/contact" onclick="onNav('/contact')">Contact</a></li>
+			<ul id="nav-links">
+				<li><a href="#" class="nav-item">Home</a></li>
+				<li><a href="#projects" class="nav-item">Projects</a></li>
+				<li><a href="#contact" class="nav-item">Contact</a></li>
 				<li><a href="#">Resume</a></li>
 			</ul>
 		</nav>
