--- a/client/index.html
+++ b/client/index.html
@@ -6,17 +6,21 @@
 		<script defer src="/dist/bundle.js"></script>
 		<title>Elizabeth Woodhouse</title>
 		<link rel="stylesheet" href="style.css" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Cardo&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
-		<div>
-			<img class='logo-image'src="./images/logo.png" />
+		<div class="header">
+			<img class="logo-image" src="./images/logo.png" />
 		</div>
 		<nav>
 			<ul id="nav-links">
 				<li><a href="#" class="nav-item">Home</a></li>
 				<li><a href="#projects" class="nav-item">Projects</a></li>
-				<li><a href="#contact" class="nav-item">Contact</a></li>
 				<li><a href="#">Resume</a></li>
+				<li><a href="#contact" class="nav-item">Contact</a></li>
 			</ul>
 		</nav>
 		<div id="content" class="content"></div>
