--- a/client/index.html
+++ b/client/index.html
@@ -13,19 +13,52 @@
 	</head>
 	<body>
 		<div class="header">
-			<img class="logo-image" src="./images/logo.png" />
+			<h1>Elizabeth<br />Woodhouse</h1>
+			<p>Software Engineer</p>
+			<nav>
+				<ul class="nav-links">
+					<li><a href="#" class="nav-item">Home</a></li>
+					<li><a href="#projects" class="nav-item">Projects</a></li>
+					<li><a href="#">Resume</a></li>
+					<li><a href="#contact" class="nav-item">Contact</a></li>
+					<li class="social_logos">
+						<a href="https://github.com/elizabethwoodhouse" class="nav-item"
+							><img src="./images/logo/github_logo.png" ref="github link"
+						/></a>
+					</li>
+					<li class="social_logos">
+						<a
+							href="https://www.linkedin.com/in/elizabethjpwoodhouse/"
+							class="nav-item"
+							><img src="./images/logo/linkedin_logo.png" ref="linkedin link"
+						/></a>
+					</li>
+				</ul>
+			</nav>
 		</div>
-		<nav>
-			<ul id="nav-links">
-				<li><a href="#" class="nav-item">Home</a></li>
-				<li><a href="#projects" class="nav-item">Projects</a></li>
-				<li><a href="#">Resume</a></li>
-				<li><a href="#contact" class="nav-item">Contact</a></li>
-			</ul>
-		</nav>
-		<div id="content" class="content"></div>
+		<main id="content" class="content"></main>
 		<footer>
-			<p>Created by Elizabeth Woodhouse</p>
+			<div class="footer_items">
+				<ul>
+					<li>
+						<a href="https://github.com/elizabethwoodhouse" class="logo"
+							><img src="./images/logo/github_logo.png" ref="github link"
+						/></a>
+					</li>
+					<li>
+						<a
+							href="https://www.linkedin.com/in/elizabethjpwoodhouse/"
+							class="logo"
+							><img src="./images/logo/Linkedin_logo.png" ref="linkedin link"
+						/></a>
+					</li>
+				</ul>
+			</div>
+			<p>
+				Created by Elizabeth Woodhouse with Vanilla JavaScript, HTML and CSS
+			</p>
+			<p>Illustration of Lego by @instagram</p>
+			<a href="https://github.com/ElizabethWoodhouse/portfolio">Source Code</a>
 		</footer>
 	</body>
 </html>
