--- a/client/index.html
+++ b/client/index.html
@@ -19,17 +19,30 @@
 				<ul class="nav-links">
 					<li><a href="#" class="nav-item">Home</a></li>
 					<li><a href="#projects" class="nav-item">Projects</a></li>
-					<li><a href="#">Resume</a></li>
+					<li>
+						<a
+							href="https://drive.google.com/file/d/1t5ppIoN-_KnrweqnRM-ot561fMbWC9JS/view?usp=sharing"
+							target="_blank"
+							>Resume</a
+						>
+					</li>
 					<li><a href="#contact" class="nav-item">Contact</a></li>
 					<li class="social_logos">
-						<a href="https://github.com/elizabethwoodhouse" class="nav-item"
-							><img src="./images/logo/github_logo.png" ref="github link"
+						<a
+							href="https://github.com/elizabethwoodhouse"
+							target="_blank"
+							class="nav-item"
+							><img
+								src="./images/logo/github_logo.png"
+								target="_blank"
+								ref="github link"
 						/></a>
 					</li>
 					<li class="social_logos">
 						<a
 							href="https://www.linkedin.com/in/elizabethjpwoodhouse/"
 							class="nav-item"
+							target="_blank"
 							><img src="./images/logo/linkedin_logo.png" ref="linkedin link"
 						/></a>
 					</li>
